--- a/index.ipynb
+++ b/index.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,13 @@
     "## importing investpy library that will pull data  from investing.com\n",
     "\n",
     "import investpy as inv\n",
-    "import pandas as pd "
+    "import pandas as pd \n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +79,7 @@
        "Index(['Open', 'High', 'Low', 'Close', 'Volume', 'Currency', 'Change'], dtype='object')"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +199,7 @@
        "2019-01-08  10750.19  10910.71  10745.03  10803.98  96569000      EUR    0.52"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +414,7 @@
        "4    0.52  "
       ]
      },
-     "execution_count": 73,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +443,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +646,7 @@
        "[1344 rows x 8 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -688,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -826,7 +827,7 @@
        "4    0.52    Tuesday  January  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,8 +841,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exploratory Data Analysis"
+    "## Exploratory Data Analysis\n",
+    "\n",
+    "### Here we will explore/analyze data to gain insights and better understanding "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Statistical Analysis ,\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dax Analysis:\n",
+      "Max price:18567.16\n",
+      "Min Price:8255.65\n",
+      "avg_price:14036.31\n",
+      "total_volume:107329552768.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "# writing a function that get min ,max ,mean() and total trading volume\n",
+    "max_price = df[\"High\"].max()\n",
+    "min_price = df[\"Low\"].min()\n",
+    "avg_price = df[\"Close\"].mean()\n",
+    "total_volume = df[\"Volume\"].sum()\n",
+    "\n",
+    "print(\"Dax Analysis:\")\n",
+    "print(f\"Max price:{max_price:.2f}\")\n",
+    "print(f\"Min Price:{min_price:.2f}\")\n",
+    "print(f'avg_price:{avg_price:.2f}')\n",
+    "print(f'total_volume:{total_volume:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Univariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
